--- a/projectPage.html
+++ b/projectPage.html
@@ -205,6 +205,40 @@
 
         <!-- Projects -->
         <div class="projects  container ">
+
+            <div class="project pros proPalettable mt-lg-5">
+
+                <button class="btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#descPalettable">
+                    <figure>
+                        <figcaption class="projectCap"> Palettable
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-palette" viewBox="0 0 16 16">
+                                <path d="M8 5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3m4 3a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3M5.5 7a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m.5 6a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
+                                <path d="M16 8c0 3.15-1.866 2.585-3.567 2.07C11.42 9.763 10.465 9.473 10 10c-.603.683-.475 1.819-.351 2.92C9.826 14.495 9.996 16 8 16a8 8 0 1 1 8-8m-8 7c.611 0 .654-.171.655-.176.078-.146.124-.464.07-1.119-.014-.168-.037-.37-.061-.591-.052-.464-.112-1.005-.118-1.462-.01-.707.083-1.61.704-2.314.369-.417.845-.578 1.272-.618.404-.038.812.026 1.16.104.343.077.702.186 1.025.284l.028.008c.346.105.658.199.953.266.653.148.904.083.991.024C14.717 9.38 15 9.161 15 8a7 7 0 1 0-7 7"/>
+                              </svg>
+                        </figcaption>
+                        <img src="../pics/palette.png" class="projectIMG img-fluid  "
+                            alt=" Computing Quiz Website quiz page">
+                    </figure>
+                </button>
+            </div>
+
+            <div class="project pros proCompQuiz mt-lg-5">
+
+                <button class="btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#descCompQuiz">
+                    <figure>
+                        <figcaption class="projectCap"> Computing Quiz Website
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-plus-slash-minus" viewBox="0 0 16 16">
+                                <path
+                                    d="m1.854 14.854 13-13a.5.5 0 0 0-.708-.708l-13 13a.5.5 0 0 0 .708.708M4 1a.5.5 0 0 1 .5.5v2h2a.5.5 0 0 1 0 1h-2v2a.5.5 0 0 1-1 0v-2h-2a.5.5 0 0 1 0-1h2v-2A.5.5 0 0 1 4 1m5 11a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5A.5.5 0 0 1 9 12" />
+                            </svg>
+                        </figcaption>
+                        <img src="../pics/computingQuiz.png" class="projectIMG img-fluid  "
+                            alt=" Computing Quiz Website quiz page">
+                    </figure>
+                </button>
+            </div>
+
             <div class="project pros pro1 mt-lg-5 ">
 
                 <button class="btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#desc1">
@@ -255,27 +289,29 @@
             </div>
 
 
-            <div class="project pros proCompQuiz mt-lg-5">
-
-                <button class="btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#descCompQuiz">
-                    <figure>
-                        <figcaption class="projectCap"> Computing Quiz Website
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-plus-slash-minus" viewBox="0 0 16 16">
-                                <path
-                                    d="m1.854 14.854 13-13a.5.5 0 0 0-.708-.708l-13 13a.5.5 0 0 0 .708.708M4 1a.5.5 0 0 1 .5.5v2h2a.5.5 0 0 1 0 1h-2v2a.5.5 0 0 1-1 0v-2h-2a.5.5 0 0 1 0-1h2v-2A.5.5 0 0 1 4 1m5 11a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5A.5.5 0 0 1 9 12" />
-                            </svg>
-                        </figcaption>
-                        <img src="../pics/computingQuiz.png" class="projectIMG img-fluid  "
-                            alt=" Computing Quiz Website quiz page">
-                    </figure>
-                </button>
-            </div>
+            
 
         </div>
 
         <!-- Project Descriptions -->
         <div class="projectDescriptions ">
+
+            <!-- Quiz Website -->
+            <div class="collapse multi-collapse descs" id="descPalettable">
+                <div class="card card-body">
+                    <strong><u>
+                            Palettable |
+                            <em>
+                                Streamlit, Python, HTML, CSS, JavaScript
+                            </em>
+                        </u></strong>
+                    <p>
+                        During the AstonHack 2025, my team developed Palettable. This tool worked to colour analyse and to organise user's wardrobes to increase assessability and usability within the Fashion industry.
+                        Our colour analysis program takes a live photograph via webcam or an uploaded image and picks out the colours. Based on these hues and the answers to a short quiz, your seasonal palette is calculated and colours are suggested.
+Our wardrobe feature enables users to upload their clothing items and browse through these. It works to help users remember which clothes they have and to easily put together outfits without having the big mess of physically sorting through your clothes.
+                    </p>
+                </div>
+            </div>
 
             <!-- Mario -->
             <div class="collapse multi-collapse descs" id="desc1">
@@ -333,22 +369,7 @@
 
 
 
-            <!-- Quiz Website -->
-            <div class="collapse multi-collapse descs" id="descCompQuiz">
-                <div class="card card-body">
-                    <strong><u>
-                            Quiz Website |
-                            <em>
-                                HTML, CSS, JavaScript
-                            </em>
-                        </u></strong>
-                    <p>
-                        During the Couch to Coder program, I created a functioning quiz.
-                        I focused on developing my JavaScript knowledge and making the user's inputs lead to the
-                        correct output.
-                    </p>
-                </div>
-            </div>
+
 
 
 
